2004-10-06  Not Zed  <NotZed@Ximian.com>

	* gui/component/addressbook-view.c (popup_event_callback): 
	* gui/component/select-names/e-select-names.c (section_right_click_cb):
	* gui/widgets/e-addressbook-view.c (do_popup_menu): fix for
	e-popup api changes.  Moved all mask specifiers to visible rather
	than enable in the menu table.

2004-10-06  Not Zed  <NotZed@Ximian.com>

	* gui/contact-editor/e-contact-editor.c: removed
	gnome-popup-menu.h (unused).

	* gui/widgets/e-addressbook-reflow-adapter.c: 
	* gui/widgets/eab-popup-control.c: remove e-popup-menu.h (unused).

	* gui/component/select-names/e-select-names.c
	(section_right_click_cb): use e-popup.  Somewhat overengineered
	for this use ...
	(remove_cb): api changes.

	* gui/widgets/eab-popup.c (eab_popup_target_new_select_names):
	added pretty useless wrapper for the select names popup.  Added to
	hook maps.

2004-10-01  Not Zed  <NotZed@Ximian.com>

	* gui/widgets/e-addressbook-view.c (do_popup_menu): convert to
	using EABPopup.
	(sources): remove dead code.
	(has_email_address_1, get_has_email_address): removed now
	redundant code.
	(save_as, send_as, send_to, print, copy, paste, cut, delete) 
	(copy_to_folder, move_to_folder, new_card, new_list): new api.
	(free_popup_info): dead.
	(print_envelope): not pining.
	(get_contact_list): take a popup target instead, don't ref.
	(get_contact_list_1): not required no more.
	(contact_and_book_free): same.
	(delete): call eab_view_delete_selection.
	(eab_view_delete_selection): do the actual delete here.

	* gui/widgets/eab-popup.c (eab_popup_target_new_select): implement.

2004-10-01  Not Zed  <NotZed@Ximian.com>

	* gui/widgets/eab-popup.[ch]: addressbook popup driver.

	* gui/component/addressbook-view.c (delete_addressbook_cb): use
	e-error for the message prompt.  don't bother keeping it around,
	it can never be re-sensitised anyway.
	(book_removed): no longer destroy the original dialogue.

	* addressbook-errors.xml: add ask-delete for deleting